--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
-  <meta charset='utf-8' />
-  <title>（実験・演習用）</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>しりとりバトル</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-</body>
+  <h1>しりとりバトル</h1>
 
+  <div id="game-area">
+    <div id="log">
+      <!-- プレイヤーとコンピューターの単語履歴 -->
+    </div>
+
+    <input type="text" id="playerInput" placeholder="単語を入力してください" />
+    <button id="submitBtn">送信</button>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
