--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>しりとりバトル</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>しりとりバトル</h1>
 
   <div id="game-area">
-    <div id="log">
-      <!-- プレイヤーとコンピューターの単語履歴 -->
-    </div>
-
-    <input type="text" id="playerInput" placeholder="単語を入力してください" />
+    <div id="timer">残り時間: 60秒</div>
+    <div id="turnCount">ターン数: 0</div>
+    <div id="log"></div>
+    <input type="text" id="playerInput" placeholder="単語を入力してください">
     <button id="submitBtn">送信</button>
+    <button id="restartBtn" style="display: none;">リスタート</button>
+    <button id="menuBtn" style="display: none;" onclick="location.href='menu.html'">メニュー</button>
+    <button id="scoreBtn" style="display: none;" onclick="location.href='score.html'">成績</button>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
-<!--aaa-- >
-< !--知久晃大 -->
-<!--aaa-- >
