--- a/htdocs/score.html
+++ b/htdocs/score.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>成績表示</title>
   <style>
     body { font-family: sans-serif; padding: 20px; background: #f0f0f0; }
@@ -14,7 +14,7 @@
   <h1>成績表示（ユーザー別上位10件）</h1>
   <p id="usernameLabel"></p>
   <ul id="scoreList"></ul>
-  <button onclick="location.href='index.html'">メニューに戻る</button>
+  <button onclick="location.href='menu.html'">メニューに戻る</button>
 
   <script src="score.js"></script>
 </body>
