ランキングのリンク

--- a/htdocs/menu.html
+++ b/htdocs/menu.html
@@ -26,6 +26,7 @@
 <body>
   <h1>しりとりバトル - メニュー</h1>
   <button onclick="location.href='index.html'">▶ ゲーム開始</button>
-  <button onclick="location.href='score.html'">📊 成績を見る</button>
+  <button onclick="location.href='score.html'">📊 ▶成績を見る</button>
+  <button onclick="location.href='ranking.html'">▶ ランキング</button>
 </body>
 </html>
