--- a/htdocs/register.html
+++ b/htdocs/register.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <title>新規登録 - しりとりバトル</title>
-  <style>
-    body { font-family: sans-serif; text-align: center; padding: 40px; background: #f9f9f9; }
-    input, button {
-      margin: 10px;
-      padding: 10px;
-      font-size: 16px;
-      width: 250px;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>新規登録</title>
+  <link rel="stylesheet" href="style.css">
+  <script>
+    function validateForm() {
+      const userId = document.getElementById("userId").value;
+      const password = document.getElementById("password").value;
+      const error = document.getElementById("errorMessage");
+      error.textContent = "";
+
+      const allowedChars = /^[a-zA-Z0-9!$%&'()*+,/;<=>?\[\]^{}~]{1,20}$/;
+      if (!allowedChars.test(userId)) {
+        error.textContent = "ユーザーIDは半角英数字と指定された記号のみ、20文字以内で入力してください。";
+        return false;
+      }
+
+      if (password.length < 8 || password.length > 20) {
+        error.textContent = "パスワードは8文字以上20文字以内で入力してください。";
+        return false;
+      }
+
+      const hasUpper = /[A-Z]/.test(password);
+      const hasLower = /[a-z]/.test(password);
+      const hasDigit = /[0-9]/.test(password);
+      const hasSymbol = /[!$%&'()*+,/;<=>?\[\]^{}~]/.test(password);
+
+      const typesUsed = [hasUpper, hasLower, hasDigit, hasSymbol].filter(Boolean).length;
+
+      if (typesUsed < 2) {
+        error.textContent = "パスワードは大文字、小文字、数字、記号のうち2種類以上を含めてください。";
+        return false;
+      }
+
+      // 通過した場合は true
+      return true;
     }
-    .error { color: red; }
-    .success { color: green; }
-  </style>
+  </script>
 </head>
 <body>
-  <h1>新規ユーザー登録</h1>
-  <input type="text" id="newId" placeholder="ユーザーID"><br>
-  <input type="password" id="newPassword" placeholder="パスワード"><br>
-  <input type="password" id="confirmPassword" placeholder="パスワード（確認）"><br>
-  <button onclick="register()">登録する</button><br>
-  <p><a href="login.html">ログイン画面へ戻る</a></p>
-  <p class="error" id="errorMsg"></p>
-  <p class="success" id="successMsg"></p>
+  <h1>新規登録</h1>
+  <form onsubmit="return validateForm()">
+    <label for="userId">ユーザーID:</label>
+    <input type="text" id="userId" name="userId" maxlength="20" required><br><br>
 
-  <script src="register.js"></script>
+    <label for="password">パスワード:</label>
+    <input type="password" id="password" name="password" required><br><br>
+
+    <button type="submit">登録</button>
+  </form>
+  <p id="errorMessage" style="color: red;"></p>
 </body>
 </html>
