--- a/htdocs/ranking.html
+++ b/htdocs/ranking.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <title>スコアランキング</title>
+  <link rel="stylesheet" href="style.css" />
   <style>
-    body { font-family: sans-serif; text-align: center; background: #f4f4f4; padding: 20px; }
-    table { margin: 0 auto; border-collapse: collapse; width: 60%; }
+    body { font-family: sans-serif; text-align: center; padding: 20px; }
+    table { margin: 0 auto; border-collapse: collapse; width: 80%; }
     th, td { border: 1px solid #ccc; padding: 10px; }
     th { background-color: #eee; }
   </style>
 </head>
 <body>
-  <h1>しりとりRTA スコアランキング</h1>
+  <h1>しりとりRTA ランキング</h1>
   <table>
     <thead>
       <tr><th>順位</th><th>ユーザー名</th><th>スコア</th><th>プレイ日時</th></tr>
@@ -19,6 +20,7 @@
     <tbody id="rankingBody"></tbody>
   </table>
 
+  <p><a href="menu.html">メニューへ戻る</a></p>
   <script src="ranking.js"></script>
 </body>
 </html>
