--- a/htdocs/menu.html
+++ b/htdocs/menu.html
@@ -85,7 +85,7 @@
   <!-- メニュー本体 -->
   <div class="container">
     <h1>しりとりバトル 🎮 メニュー</h1>
-    <button class="menu-button" onclick="location.href='index.html'">▶ ゲーム開始</button>
+    <button class="menu-button" onclick="location.href='game.html'">▶ ゲーム開始</button>
     <button class="menu-button" onclick="location.href='score.html'">▶ 成績を見る</button>
     <button class="menu-button" onclick="location.href='ranking.html'">▶ ランキング</button>
   </div>
