ランキング諦め

--- a/htdocs/menu.html
+++ b/htdocs/menu.html
@@ -86,8 +86,10 @@
   <div class="container">
     <h1>しりとりバトル 🎮 メニュー</h1>
     <button class="menu-button" onclick="location.href='game.html'">▶ ゲーム開始</button>
+
+    <!--- データベースに接続ができなかったため機能凍結
     <button class="menu-button" onclick="location.href='score.html'">▶ 成績を見る</button>
-    <button class="menu-button" onclick="location.href='ranking.html'">▶ ランキング</button>
+    <button class="menu-button" onclick="location.href='ranking.html'">▶ ランキング</button> -->
   </div>
 </body>
 </html>
