--- a/htdocs/game.html
+++ b/htdocs/game.html
@@ -17,7 +17,7 @@
     <button id="submitBtn">送信</button>
     <button id="restartBtn" style="display: none;">リスタート</button>
     <button id="menuBtn" style="display: none;" onclick="location.href='menu.php'">メニュー</button>
-   
+    <button id="scoreBtn" style="display: none;" onclick="location.href='score.html'">成績</button>
 
   </div>
   <script src="script.js"></script>
